Comment out Gridmet date constraint for test
The date constraint (Gridmet_current.py) prevents us from testing the run.

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -13,5 +13,5 @@ USER $USER
 
 WORKDIR $SOURCE_DIR
 
-ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "onhm-fetcher-parser/pkg/Gridmet_current.py"]
+#ENTRYPOINT \
+  #["/opt/conda/bin/python", "-u", "onhm-fetcher-parser/pkg/Gridmet_current.py"]
